--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.20",
+  "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "rollup": "^4.52.4",
-    "vite": "^7.1.9"
+    "rollup": "^4.52.4"
+  
   }
 }
