--- a/client/package.json
+++ b/client/package.json
@@ -16,18 +16,18 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "vite": "^5.4.20",
-  "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "rollup": "^4.52.4"
-  
+    "rollup": "^4.52.4",
+    "vite": "^5.4.20"
   }
 }
